// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content in browser assignable user renders 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 3.5rem;
  height: 3.5rem;
  border-radius: 50%;
  border: none;
  line-height: 1.6rem;
  font-size: 1.4rem;
  color: #ffffff;
  background-color: #007297;
  cursor: pointer;
}

.c4:hover {
  box-shadow: 0 0 0.2rem 0.2rem rgba(0,0,0,0.3);
}

.c4[data-focused],
.c4[data-focus-visible] {
  outline: 0.2rem auto Highlight;
  outline: 0.2rem auto -webkit-focus-ring-color;
  outline-offset: 0.2rem;
}

.c4 svg {
  width: 1.5rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 3.5rem;
  height: 3.5rem;
  border-radius: 50%;
  border: none;
  line-height: 1.6rem;
  font-size: 1.4rem;
  color: #ffffff;
  background-color: #007297;
  cursor: pointer;
}

.c4:hover {
  box-shadow: 0 0 0.2rem 0.2rem rgba(0,0,0,0.3);
}

.c4[data-focused],
.c4[data-focus-visible] {
  outline: 0.2rem auto Highlight;
  outline: 0.2rem auto -webkit-focus-ring-color;
  outline-offset: 0.2rem;
}

.c4 svg {
  width: 1.5rem;
}

.c1 {
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  max-width: 128rem;
  margin: 0 auto;
}

.c1 {
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  max-width: 128rem;
  margin: 0 auto;
}

.c1 {
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  max-width: 128rem;
  margin: 0 auto;
}

.c2 {
  display: block;
  width: auto;
  height: 3.5rem;
}

.c2 {
  display: block;
  width: auto;
  height: 3.5rem;
}

.c2 {
  display: block;
  width: auto;
  height: 3.5rem;
}

.c3 {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  overflow: visible;
  position: relative;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  overflow: visible;
  position: relative;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  overflow: visible;
  z-index: 70;
  background: #fff;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

.c0 {
  overflow: visible;
  z-index: 70;
  background: #fff;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

.c0 {
  overflow: visible;
  z-index: 70;
  background: #fff;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

@media screen and (max-width:75em) {
  .c1 {
    height: 5.2rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c1 {
    height: 5.2rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c1 {
    height: 5.2rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    height: 2.8rem;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    height: 2.8rem;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    height: 2.8rem;
  }
}

@media screen and (max-width:75em) {
  .c3 {
    height: auto;
  }
}

@media screen and (max-width:75em) {
  .c3 {
    height: auto;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
  className="c0"
  data-analytics-region="openstax-navbar"
>
  <div
    className="c1"
    data-testid="navbar"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="OpenStax Logo"
        className="c2"
        role="img"
        src="logo.svg"
      />
    </a>
    <div
      className="c3"
      data-testid="user-nav"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="Account actions"
        className="c4"
        data-rac=""
        data-react-aria-pressable={true}
        data-testid="user-nav-toggle"
        id="react-aria-1"
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`content in browser matches snapshot for logged out 1`] = `
.c1 {
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  max-width: 128rem;
  margin: 0 auto;
}

.c1 {
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  max-width: 128rem;
  margin: 0 auto;
}

.c1 {
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  max-width: 128rem;
  margin: 0 auto;
}

.c1 {
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  max-width: 128rem;
  margin: 0 auto;
}

.c2 {
  display: block;
  width: auto;
  height: 3.5rem;
}

.c2 {
  display: block;
  width: auto;
  height: 3.5rem;
}

.c2 {
  display: block;
  width: auto;
  height: 3.5rem;
}

.c2 {
  display: block;
  width: auto;
  height: 3.5rem;
}

.c3 {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  display: block;
  -webkit-letter-spacing: -0.072rem;
  -moz-letter-spacing: -0.072rem;
  -ms-letter-spacing: -0.072rem;
  letter-spacing: -0.072rem;
  font-size: 1.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  padding: 1rem 0;
  color: #5e6062;
}

.c3:hover,
.c3:active,
.c3:focus {
  padding-bottom: 0.6rem;
  border-bottom: 0.4rem solid #63a524;
}

.c3:hover {
  color: #424242;
}

.c0 {
  overflow: visible;
  z-index: 70;
  background: #fff;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

.c0 {
  overflow: visible;
  z-index: 70;
  background: #fff;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

.c0 {
  overflow: visible;
  z-index: 70;
  background: #fff;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

.c0 {
  overflow: visible;
  z-index: 70;
  background: #fff;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

@media screen and (max-width:75em) {
  .c1 {
    height: 5.2rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c1 {
    height: 5.2rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c1 {
    height: 5.2rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c1 {
    height: 5.2rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    height: 2.8rem;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    height: 2.8rem;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    height: 2.8rem;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    height: 2.8rem;
  }
}

@media screen and (max-width:75em) {
  .c3 {
    font-size: 1.4rem;
    -webkit-letter-spacing: 0.02rem;
    -moz-letter-spacing: 0.02rem;
    -ms-letter-spacing: 0.02rem;
    letter-spacing: 0.02rem;
    padding: 0.7rem 0;
  }
}

@media screen and (max-width:75em) {
  .c3:hover,
  .c3:active,
  .c3:focus {
    padding: 0.7rem 0;
    border-bottom: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
  className="c0"
  data-analytics-region="openstax-navbar"
>
  <div
    className="c1"
    data-testid="navbar"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="OpenStax Logo"
        className="c2"
        role="img"
        src="logo.svg"
      />
    </a>
    <a
      className="c3"
      data-analytics-label="login"
      data-testid="nav-login"
      href="/accounts/login?r=/"
    >
       
      Log in
    </a>
  </div>
</div>
`;

exports[`content in browser matches snapshot for null state 1`] = `
.c1 {
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  max-width: 128rem;
  margin: 0 auto;
}

.c2 {
  display: block;
  width: auto;
  height: 3.5rem;
}

.c0 {
  overflow: visible;
  z-index: 70;
  background: #fff;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

@media screen and (max-width:75em) {
  .c1 {
    height: 5.2rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    height: 2.8rem;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
  className="c0"
  data-analytics-region="openstax-navbar"
>
  <div
    className="c1"
    data-testid="navbar"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="OpenStax Logo"
        className="c2"
        role="img"
        src="logo.svg"
      />
    </a>
  </div>
</div>
`;

exports[`content in browser when logged in matches snapshot 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 3.5rem;
  height: 3.5rem;
  border-radius: 50%;
  border: none;
  line-height: 1.6rem;
  font-size: 1.4rem;
  color: #ffffff;
  background-color: #007297;
  cursor: pointer;
}

.c4:hover {
  box-shadow: 0 0 0.2rem 0.2rem rgba(0,0,0,0.3);
}

.c4[data-focused],
.c4[data-focus-visible] {
  outline: 0.2rem auto Highlight;
  outline: 0.2rem auto -webkit-focus-ring-color;
  outline-offset: 0.2rem;
}

.c4 svg {
  width: 1.5rem;
}

.c1 {
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  max-width: 128rem;
  margin: 0 auto;
}

.c1 {
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 6rem;
  max-width: 128rem;
  margin: 0 auto;
}

.c2 {
  display: block;
  width: auto;
  height: 3.5rem;
}

.c2 {
  display: block;
  width: auto;
  height: 3.5rem;
}

.c3 {
  -webkit-animation: 100ms bcCCNc ease-out;
  animation: 100ms bcCCNc ease-out;
  overflow: visible;
  position: relative;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  overflow: visible;
  z-index: 70;
  background: #fff;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

.c0 {
  overflow: visible;
  z-index: 70;
  background: #fff;
  position: relative;
  padding: 0 3.2rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

@media screen and (max-width:75em) {
  .c1 {
    height: 5.2rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c1 {
    height: 5.2rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    height: 2.8rem;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    height: 2.8rem;
  }
}

@media screen and (max-width:75em) {
  .c3 {
    height: auto;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
  className="c0"
  data-analytics-region="openstax-navbar"
>
  <div
    className="c1"
    data-testid="navbar"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      <img
        alt="OpenStax Logo"
        className="c2"
        role="img"
        src="logo.svg"
      />
    </a>
    <div
      className="c3"
      data-testid="user-nav"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="Account actions"
        className="c4"
        data-rac=""
        data-react-aria-pressable={true}
        data-testid="user-nav-toggle"
        id="react-aria-1"
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        TT
      </button>
    </div>
  </div>
</div>
`;
